--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-    "extends": "airbnb-base"
+    "extends": ["plugin:vue/essential", "airbnb-base"],
+    "plugins": ["vue"],
+    "rules": {
+        "import/extensions": ["error", "always", {
+            "js": "never",
+            "vue": "never"
+        }]
+    }
 }
